--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -22,8 +22,14 @@
     <height>625</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>625</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Jewelsare</string>
   </property>
   <widget class="QWidget" name="centralWidget"/>
  </widget>
